Dosya yapıları ve CSS ile ilgili düzenlemeler

--- a/my-react-app/src/components/css/Home.css
+++ b/my-react-app/src/components/css/Home.css
@@ -3,4 +3,21 @@
     flex-direction: column;
     width: 100%;
    
+
+}
+
+.skills{
+    display: flex;
+    justify-content: center;
+}
+
+/* .profile{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+} */
+
+.footer{
+    background-color: beige;
+   margin-top: 8rem;
 }
