--- a/my-react-app/src/components/css/Header.css
+++ b/my-react-app/src/components/css/Header.css
@@ -1,17 +1,167 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
+
+
 .head{
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    margin-right: 10%;
+    margin-right: 5%;
+    color: grey;
+    font-family: Inter;
+   
 }
 .toggle {
     display: flex;
     padding: 2vh;
+    width: 50vh;
+    justify-content: space-around;
+    align-items: center;
 }
+.toggle p {
+    margin-left: 2rem;
+}
+
+.toggle button{
+    margin-right: 5vh;
+
+}
+.switch {
+    font-size: 17px;
+    position: relative;
+    display: inline-block;
+    width: 64px;
+    height: 34px;
+  }
+
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #73C0FC;
+    transition: .4s;
+    border-radius: 30px;
+  }
+
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 30px;
+    width: 30px;
+    border-radius: 20px;
+    left: 2px;
+    bottom: 2px;
+    z-index: 2;
+    background-color: #e8e8e8;
+    transition: .4s;
+  }
+
+  .sun svg {
+    position: absolute;
+    top: 6px;
+    left: 36px;
+    z-index: 1;
+    width: 24px;
+    height: 24px;
+  }
+  
+  .moon svg {
+    fill: #73C0FC;
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    z-index: 1;
+    width: 24px;
+    height: 24px;
+  }
+  
+  /* .switch:hover */.sun svg {
+    animation: rotate 15s linear infinite;
+  }
+  
+  @keyframes rotate {
+   
+    0% {
+      transform: rotate(0);
+    }
+  
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
+  /* .switch:hover */.moon svg {
+    animation: tilt 5s linear infinite;
+  }
+  
+  @keyframes tilt {
+   
+    0% {
+      transform: rotate(0deg);
+    }
+  
+    25% {
+      transform: rotate(-10deg);
+    }
+  
+    75% {
+      transform: rotate(10deg);
+    }
+  
+    100% {
+      transform: rotate(0deg);
+    }
+  }
+  
+  .input:checked + .slider {
+    background-color: #183153;
+  }
+  
+  .input:focus + .slider {
+    box-shadow: 0 0 1px #183153;
+  }
+  
+  .input:checked + .slider:before {
+    transform: translateX(30px);
+  }
+
+
+
 .navigation{
     display: flex;
-    padding: 2vh;
+    padding: 1vh;
 }
 .navigation p{
     margin-right: 15vh;
+}
+.navigation button{
+    padding: 3px 30px;
+    background-color: white;
+    color: rgb(68, 29, 206);
+    border-radius: 5px;
+    border: 1px solid rgb(68, 29, 206);
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+#tr-en{
+    background: none;
+    font-size: 1rem;
+    border: none;
+    color: grey;
+}
+
+#tr-en span{
+    color: rgb(68, 29, 206);
 }
